typescript/checker/tests/conformance/parser/ecmascript5/Accessors/parserAccessors5.ts.stderr
error: TS1183
 --> $DIR/tests/conformance/parser/ecmascript5/Accessors/parserAccessors5.ts:3:7
  |
3 |   get foo() { return 0; }
  |       ^^^

